<resources>
    <string name="app_name">UntactOrder</string>
    <string name="krw">won</string>
    <string name="error_not_downloaded_from_playstore">This app was not downloaded from the PlayStore. Please uninstall this app and reinstall UntactOrder client on PlayStore!</string>

    <string name="at_pwin_guide">Please input table password</string>
    <string name="at_pwin_del_all">Clear</string>
    <string name="at_pwin_del_one">Remove</string>
    <string name="at_pwin_table_name">"Table "</string>
    <string name="at_pwin_guide_new">Please input new table password</string>
    <string name="at_pwin_guide_confirm">Please confirm your password\nIf you enter it incorrectly 3 times, the registration password will be initialized</string>
    <string name="at_pwin_guide_retry">You entered the wrong password\nPlease enter it again</string>
    <string name="at_pwin_wrong_password_msg">"Different password! Try again! "</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_reject">Reject</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_okay">Okay</string>
    <string name="at_main_guide">Guide</string>
    <string name="at_main_guide_msg">Want to know how to use app? ></string>
    <string name="at_main_detailed_guide_msg">
        \n
        Not Translated\n
    </string>
    <string name="at_main_total_price">Total order price</string>
    <string name="at_main_make_new_order">Make New Order</string>
    <string name="at_main_make_additional_order">Make Additional Order</string>
    <string name="at_qrsc_guide_msg">Please put the QR code in the scan box!</string>
    <string name="at_qrsc_cancel_msg">QR scanner activity  is canceled.</string>
    <string name="at_qrsc_invalid_msg">Invalid QR code!!!</string>
    <string name="at_menu_select_title">Select Menu Option</string>
    <string name="at_menu_select_menuname">menu name</string>
    <string name="at_menu_select_price">price</string>
    <string name="at_menu_select_quantity">quantity</string>
    <string name="at_menu_select_done">Done</string>
    <string name="at_menu_select_category_recm">Hot</string>

    <string name="at_main_footer_msg">UntactOrder Android Client\nby UntactOrder Developers – An OpenSource Organization</string>
    <string name="at_main_userinfo_title_msg">User Info</string>
    <string name="at_main_userinfo_guide_msg">Tap here for more\naccount information!</string>
    <string name="at_main_userinfo_profile_content_description">user profile image</string>
    <string name="at_main_userinfo_history_title_msg">Order history (last 30 days)</string>
    <string name="at_main_userinfo_history_count_msg">orders</string>
    <string name="at_main_userinfo_history_storecount_msg">stores</string>
    <string name="at_main_ordermenu_title_msg">Order placing</string>
    <string name="at_main_ordermenu_guide_msg">Tab here to read\nthe instructions again!</string>
    <string name="at_main_ordermenu_store_msg">None of stores was connected</string>
    <string name="at_main_ordermenu_orderplacement_msg">Connect to a store\nby scanning QR</string>
    <string name="at_main_ordermenu_orderlist_title_msg">Ongoing order list</string>
    <string name="at_main_ordermenu_location_title_msg">Chain stores\' location</string>
    <string name="at_main_ordermenu_location_map_msg">Find on the map</string>
    <string name="at_main_ordermenu_location_list_msg">Search by distance</string>
</resources>