<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuSelectActivity"
        android:backgroundTint="#F1F2F4"
        android:background="#8E1111">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:text="@string/at_menu_select_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textStyle="bold"
                android:textColor="#878696"
                android:textSize="30sp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="12dp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerView1"
                android:background="#FFFFFF"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="3"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/at_menu_select_menuname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/option"
                    android:layout_weight="0.9"
                    android:textColor="#3A3947"
                    android:gravity="center"/>

            <TextView
                    android:text="@string/at_menu_select_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/price"
                    android:textColor="#3A3947"
                    android:gravity="center"
                    android:layout_weight="0.3"/>

            <TextView
                    android:text="@string/at_menu_select_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ea"
                    android:textColor="#3A3947"
                    android:layout_weight="1.8"
                    android:gravity="center"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerView"/>
    </LinearLayout>

    <TextView
            android:text="@string/at_menu_select_done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:id="@+id/tx_finish"
            android:gravity="center"
            app:layout_constraintVertical_bias="0.97"
            android:background="@drawable/shape_rect_all_corner_with_stroke_24"
            android:backgroundTint="#FFFFFF"
            android:onClick="onProceedOrderButtonClicked"
            android:elevation="6dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>