<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".androidclient.MainActivity2"
        android:fillViewport="true"
        android:background="@color/signature_background">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_header"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <ImageView
                    android:id="@+id/main_iv_linear_logo"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitStart"
                    android:contentDescription="@string/app_name"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    app:srcCompat="@drawable/ic_linear_logo"
                    />

            <TextView
                    android:textSize="28sp"
                    android:typeface="monospace"
                    android:id="@+id/main_tv_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    tools:ignore="HardcodedText,TextContrastCheck"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/at_main_new_order_plus_btn"
                    android:text="010-0000-0000"/>

            <TextView
                    android:textSize="14sp"
                    android:textColor="@color/gray_primary_light"
                    android:id="@+id/main_bt_guide_top_corner"
                    android:background="@drawable/shape_rect_top_corner"
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/at_main_guide"
                    android:onClick="onGuideButtonClicked"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/nanumbarungothic"/>

            <TextView
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:id="@+id/main_bt_guide_top"
                    android:background="@color/gray_primary_dark"
                    android:paddingTop="2dp"
                    android:paddingBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/at_main_guide_msg"
                    android:onClick="onGuideButtonClicked"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    tools:ignore="TouchTargetSizeCheck"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:fontFamily="@font/nanumbarungothic"/>
        </LinearLayout>

        <TextView
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/main_bt_detailed_guide"
                android:background="@drawable/shape_rect_bottom_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at_main_detailed_guide_msg"
                android:onClick="onGuideButtonClicked"
                app:layout_constraintTop_toBottomOf="@id/main_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"/>

        <View
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:id="@+id/main_line_detailed_guide_margin"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_bt_detailed_guide"
                />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_container_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_header"
                android:background="@color/signature_white">

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_list_of_orders"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:overScrollMode="never"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/main_bt_new_order_body"
                    android:background="@drawable/shape_rect_all_corner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/at_main_new_order_body"
                    android:elevation="5dp"
                    android:clickable="true"
                    android:onClick="onNewOrderButtonClicked"
                    android:focusable="true"
                    app:layout_constraintEnd_toStartOf="parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_list_of_orders"
                    android:layout_marginTop="10dp">

                <TextView
                        android:textSize="24sp"
                        android:textColor="@color/at_main_new_order_body"
                        android:gravity="center"
                        android:id="@+id/main_bt_new_order_plus"
                        android:background="@drawable/shape_circle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="+"
                        android:paddingStart="9dp"
                        android:paddingEnd="9dp"
                        android:backgroundTint="@color/at_main_new_order_plus_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="HardcodedText,TouchTargetSizeCheck,TouchTargetSizeCheck"
                        android:elevation="5dp"
                        android:clickable="true"
                        android:onClick="onNewOrderButtonClicked"
                        android:focusable="true"/>

                <TextView
                        android:textSize="20sp"
                        android:textColor="@color/at_main_new_order_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/at_main_make_new_order"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/main_bt_new_order_plus"
                        android:clickable="true"
                        android:onClick="onNewOrderButtonClicked"
                        android:focusable="true"
                        tools:ignore="TouchTargetSizeCheck"
                        android:id="@+id/main_bt_new_order_msg"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/main_line_order_separator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_bt_new_order_body"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_tv_total_price_body"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <TextView
                    android:textSize="16sp"
                    android:textColor="@color/grey_deep"
                    android:gravity="start|center|top"
                    android:id="@+id/main_tv_total_price_top"
                    android:background="@drawable/shape_rect_top_corner"
                    android:paddingTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/at_main_total_price"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:elevation="3dp"
                    android:backgroundTint="@color/at_main_total_price_background"
                    tools:ignore="TextContrastCheck"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"/>

            <TextView
                    android:textSize="20sp"
                    android:textColor="@color/magenta"
                    android:gravity="end|bottom|center"
                    android:id="@+id/main_tv_total_price_bottom"
                    android:background="@drawable/shape_rect_bottom_corner"
                    android:paddingBottom="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/krw"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:elevation="3dp"
                    android:backgroundTint="@color/at_main_total_price_background"
                    tools:ignore="TextContrastCheck"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    tools:layout_marginBottom="20dp"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>